2005-02-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* testsuite/thread/pthread1.cc: Do not invoke pthread_setconcurrency
	on Solaris 2.6 and below.
	* testsuite/thread/pthread2.cc: Likewise.
	* testsuite/thread/pthread3.cc: Likewise.
	* testsuite/thread/pthread4.cc: Likewise.
	* testsuite/thread/pthread5.cc: Likewise.
	* testsuite/thread/pthread6.cc: Likewise.

2005-02-02  Zack Weinberg  <zack@codesourcery.com>

	Backport from mainline:
	Paolo Carlini  <pcarlini@suse.de>
	* include/bits/istream.tcc (readsome):
	Tidy, closely following 27.6.1.3, p30.

2005-01-22  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR libstdc++/19510
	* include/bits/stl_list.h (_List_iterator_base): Initialize _M_node
	in constructor.
	(_List_iterator): Initialize _List_iterator_base in constructor.
	* include/bits/stl_tree.h (_Rb_tree_iterator): Initialize _M_node
	in constructor.

2004-12-03  Richard Henderson  <rth@redhat.com>

	PR 17856
	* config/cpu/i486/atomicity.h (__exchange_and_add, __atomic_add):
	Split in-out memory constraints.

2004-09-30  Release Manager

	* GCC 3.3.5 Released.

2004-08-25  Jonathan Wakely  <redi@gcc.gnu.org>

	* include/ext/enc_filebuf.h: Move concept-check macro to class scope.

2004-07-27  Benjamin Kosnik  <bkoz@redhat.com>

	* config/linker-map.gnu: Export typeinfo information.
	* configure.in (libtool_VERSION): To 5:7:0.
	* configure: Regenerate.
	* testsuite/abi_check.cc (check_version): Add CXXABI_1.2.2.

2004-07-25  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR bootstrap/15120
	* configure: Rebuilt.

2004-07-08  Ulrich Weigand  <uweigand@de.ibm.com>

	* testsuite/22_locale/time_put_members_char.cc (test01): Allow either
	"Son" or "So" as abbreviated name for Sunday in de_DE locale.
	* testsuite/22_locale/time_put_members_wchar_t.cc (test01): Likewise.

2004-06-28  David Asher  <david.asher@cavium.com>

	PR libstdc++/11352
	* include/bits/locale_facets.tcc (__pad<>::_S_pad): Don't
	access __olds beyond __oldlen.

2004-05-31  Release Manager
